Fix z-index on equipment select dropdown

--- a/src/app/assets/stylesheets/application.sass
+++ b/src/app/assets/stylesheets/application.sass
@@ -97,6 +97,9 @@ main
 .datepicker table tr td.active.active, .datepicker table tr td.active.highlighted.active, .datepicker table tr td.active.highlighted:active, .datepicker table tr td.active:active, .datepicker table tr td.active.active.focus, .datepicker table tr td.active.active:focus, .datepicker table tr td.active.active:hover, .datepicker table tr td.active.highlighted.active.focus, .datepicker table tr td.active.highlighted.active:focus, .datepicker table tr td.active.highlighted.active:hover, .datepicker table tr td.active.highlighted.focus:active, .datepicker table tr td.active.highlighted:active:focus, .datepicker table tr td.active.highlighted:active:hover, .datepicker table tr td.active.focus:active, .datepicker table tr td.active:active:focus, .datepicker table tr td.active:active:hover
   background-color: $secondary
 
+.dropdown
+  z-index: 1031
+
 #ordersAccordion
   .card-header
     button
